# oop-cpp-labs

./: CMakeLists.txt  main.cpp
lab1/: README.md  main.cpp
lab2/: README.md  matrix.cpp  matrix.h  source.cpp
lab3/: README.md  main.cpp
lab3/include/: Functions.h  Point.h  Tests.h  Trapeze.h
lab3/src/: Functions.cpp  Tests.cpp
lab4/: README.md
lab5/: README.md
lab6/: README.md
